--- a/consentimientos-service/src/main/resources/lang/messages.properties
+++ b/consentimientos-service/src/main/resources/lang/messages.properties
@@ -22,3 +22,23 @@ navbar.calendar= Calendar
 calendar.head = Month Calendar
 
 schedule.head = My activities this month
+
+error.title= Error Info
+error.info= Error Code Detail
+
+navbar.questionnaire= Cuestionario
+
+question.type.group= Group
+question.type.question= Question
+question.type.option= Option
+
+questionnaire.otherOption = Other options
+questionnaire.otherOption = Other options, separated by semicolon
+questionnaire.code.code = Code
+questionnaire.code.system = System URI
+questionnaire.code.version= Version
+questionnaire.code.display= Display
+questionnaire.code.userSelected= User Selected?
+
+yes = Yes
+no = No
