--- a/consentimientos-service/src/main/resources/lang/messages_es.properties
+++ b/consentimientos-service/src/main/resources/lang/messages_es.properties
@@ -33,3 +33,30 @@ navbar.schedule= Agenda
 calendar.head = Calendario del mes
 
 schedule.head = Mi Agenda del mes
+
+navbar.questionnaire= Cuestionario
+error.title= Informacion del error
+error.info= Detalles del codigo de error
+
+question.type.group= Grupo
+question.type.question= Pregunta
+question.type.option = Opcion
+
+questionnaire.otherOption = Introduzca otras opciones, separadas por punto y coma
+questionnaire.code.code = Código
+questionnaire.code.system = URI del sistema de codificación
+questionnaire.code.version= Version
+questionnaire.code.display= Texto a mostrar
+questionnaire.code.userSelected= Seleccionado por usuario
+
+yes = Sí
+no = No
+
+unknownQuestion= Tipo de pregunta desconocido
+
+question.coding.multipleOptionsLabel = Selecciona una o más opciones (con Ctrl + clic para seleccionar más de una opción):
+question.coding.extraOption.string = Otra respuesta de tipo texto
+question.coding.extraOption.other = Otra respuesta de cualquier tipo
+question.coding.simpleOptionsLabel = Selecciona una opción
+question.addOtherAnswer = Agregar otra respuesta
+question.reference.inputPlaceholder = Introduce una referencia FHIR
