--- a/consentimientos-service/src/main/resources/lang/messages_us.properties
+++ b/consentimientos-service/src/main/resources/lang/messages_us.properties
@@ -32,3 +32,30 @@ navbar.schedule= Schedule
 calendar.head = Month Calendar
 
 schedule.head = My activities this month
+
+navbar.questionnaire= Questionnaire
+error.title= Error Info
+error.info= Error Code Detail
+
+question.type.group= Group
+question.type.question= Question
+question.type.option = Option
+
+questionnaire.otherOption = Other options, separated by semicolon
+questionnaire.code.code = Code
+questionnaire.code.system = System URI
+questionnaire.code.version= Version
+questionnaire.code.display= Display
+questionnaire.code.userSelected= User Selected?
+
+yes = Yes
+no = No
+
+unknownQuestion= Unknown question type
+
+question.coding.multipleOptionsLabel = Select one or more options (Ctrl + click for select more than one option)
+question.coding.extraOption.string = Another text response
+question.coding.extraOption.other = Another response of any type
+question.coding.simpleOptionsLabel = Select one option
+question.addOtherAnswer = Add other answer
+question.reference.inputPlaceholder = Introduce a FHIR reference
