Mostrar tareas businessCentral y acciones,
relacionar tareas con cuestionario y plantillas etc

--- a/consentimientos-service/src/main/resources/lang/messages_es.properties
+++ b/consentimientos-service/src/main/resources/lang/messages_es.properties
@@ -6,6 +6,10 @@ navbar.home= Inicio
 navbar.logout= Cerrar Sesión
 navbar.practitioner= Facultativo
 navbar.patient= Paciente
+navbar.calendar= Calendario
+navbar.schedule= Agenda
+navbar.questionnaire= Cuestionario
+navbar.tasks = Tareas
 
 tasks.head = Mi lista de Tareas
 tasks.title = Tareas
@@ -16,6 +20,14 @@ tasks.id = Identificador
 tasks.date = Fecha
 tasks.creator = Creador
 tasks.select = Revisar
+tasks.assignedTasks = Tareas asignadas
+tasks.potentialTasks = Tareas potenciales
+tasks.claim = Reclamar
+tasks.start = Comenzar
+tasks.continue = Continuar
+tasks.reject = Rechazar
+tasks.actions = Acciones
+tasks.creationDate = Fecha de creacion
 
 task.head = Datos de una tarea
 task.title = Tarea
@@ -25,16 +37,10 @@ error.info= Código del error recibido
 
 doctor.title= Datos Facultativo
 
-
-navbar.tasks= Tareas
-navbar.calendar= Calendario
-navbar.schedule= Agenda
-
 calendar.head = Calendario del mes
 
 schedule.head = Mi Agenda del mes
 
-navbar.questionnaire= Cuestionario
 error.title= Informacion del error
 error.info= Detalles del codigo de error
 
@@ -60,3 +66,5 @@ question.coding.extraOption.other = Otra respuesta de cualquier tipo
 question.coding.simpleOptionsLabel = Selecciona una opción
 question.addOtherAnswer = Agregar otra respuesta
 question.reference.inputPlaceholder = Introduce una referencia FHIR
+
+back = Atras
