--- a/consentimientos-service/src/main/resources/lang/messages_us.properties
+++ b/consentimientos-service/src/main/resources/lang/messages_us.properties
@@ -6,6 +6,10 @@ navbar.home= Home
 navbar.logout= Logout
 navbar.practitioner= Practitioner
 navbar.patient= Patient
+navbar.calendar= Calendar
+navbar.schedule= Schedule
+navbar.questionnaire= Questionnaire
+navbar.tasks = Tasks
 
 tasks.head = My tasks list
 tasks.title = Tasks
@@ -16,6 +20,14 @@ tasks.id = Id
 tasks.date = Date
 tasks.creator = Creator
 tasks.select = Review
+tasks.assignedTasks = Assigned tasks
+tasks.pontentialTaskstask = Potential tasks
+tasks.claim = Claim
+tasks.start = Start
+tasks.continue = Continue
+tasks.reject = Reject
+tasks.actions = Actions
+tasks.creationDate = Creation date
 
 task.head = Tasks Data
 task.title = Title
@@ -25,15 +37,10 @@ error.info= Error Code Detail
 
 doctor.title= Doctor Data
 
-navbar.tasks= Tasks
-navbar.calendar= Calendar
-navbar.schedule= Schedule
-
 calendar.head = Month Calendar
 
 schedule.head = My activities this month
 
-navbar.questionnaire= Questionnaire
 error.title= Error Info
 error.info= Error Code Detail
 
@@ -59,3 +66,5 @@ question.coding.extraOption.other = Another response of any type
 question.coding.simpleOptionsLabel = Select one option
 question.addOtherAnswer = Add other answer
 question.reference.inputPlaceholder = Introduce a FHIR reference
+
+back = Back
