Páginas tareas, acciones y estilos

--- a/consentimientos-service/src/main/resources/lang/messages_es.properties
+++ b/consentimientos-service/src/main/resources/lang/messages_es.properties
@@ -31,6 +31,16 @@ tasks.creationDate = Fecha de creacion
 
 task.head = Datos de una tarea
 task.title = Tarea
+task.status.Completed = Completada
+task.status.Created = Creada
+task.status.Error = Error
+task.status.Exited = Finalizada
+task.status.Failed = Fallida
+task.status.InProgress = En progreso
+task.status.Obsolete = Obsoleta
+task.status.Ready = Lista
+task.status.Reserved = Reservada
+task.status.Suspended = Suspendida
 
 error.title= Información de error
 error.info= Código del error recibido
