--- a/consentimientos-service/src/main/resources/lang/messages_us.properties
+++ b/consentimientos-service/src/main/resources/lang/messages_us.properties
@@ -31,6 +31,16 @@ tasks.creationDate = Creation date
 
 task.head = Tasks Data
 task.title = Title
+task.status.Completed = Completed
+task.status.Created = Created
+task.status.Error = Error
+task.status.Exited = Exited
+task.status.Failed = Failed
+task.status.InProgress = In progress
+task.status.Obsolete = Obsolete
+task.status.Ready = Ready
+task.status.Reserved = Reserved
+task.status.Suspended = Suspended
 
 error.title = Error info
 error.info= Error Code Detail
