Accion completar tarea

--- a/consentimientos-service/src/main/resources/lang/messages_es.properties
+++ b/consentimientos-service/src/main/resources/lang/messages_es.properties
@@ -28,6 +28,7 @@ tasks.continue = Continuar
 tasks.reject = Rechazar
 tasks.actions = Acciones
 tasks.creationDate = Fecha de creacion
+tasks.processId = Id del proceso
 
 task.head = Datos de una tarea
 task.title = Tarea
@@ -41,6 +42,9 @@ task.status.Obsolete = Obsoleta
 task.status.Ready = Lista
 task.status.Reserved = Reservada
 task.status.Suspended = Suspendida
+
+task.complete.error = Se ha producido un error al intentar completar la tarea
+task.complete.success = ¡La tarea se ha completado correctamente!
 
 error.title= Información de error
 error.info= Código del error recibido
