--- a/consentimientos-service/src/main/resources/lang/messages_us.properties
+++ b/consentimientos-service/src/main/resources/lang/messages_us.properties
@@ -28,6 +28,7 @@ tasks.continue = Continue
 tasks.reject = Reject
 tasks.actions = Actions
 tasks.creationDate = Creation date
+tasks.processId = Process id
 
 task.head = Tasks Data
 task.title = Title
@@ -41,6 +42,9 @@ task.status.Obsolete = Obsolete
 task.status.Ready = Ready
 task.status.Reserved = Reserved
 task.status.Suspended = Suspended
+
+task.complete.error = An error occurred while trying to complete the task
+task.complete.success = The task has been completed successfully!
 
 error.title = Error info
 error.info= Error Code Detail
