mejora test y fix textos

--- a/human-tasks-service/src/main/resources/lang/messages_es.properties
+++ b/human-tasks-service/src/main/resources/lang/messages_es.properties
@@ -44,7 +44,7 @@ task.status.Reserved = Reservada
 task.status.Suspended = Suspendida
 
 task.complete.error = Se ha producido un error al intentar completar la tarea
-task.complete.success = ¡La tarea se ha completado correctamente!
+task.complete.success = La tarea se ha completado correctamente
 
 error.title= Información de error
 error.info= Código del error recibido
