--- a/human-tasks-service/src/main/resources/lang/messages_us.properties
+++ b/human-tasks-service/src/main/resources/lang/messages_us.properties
@@ -44,7 +44,7 @@ task.status.Reserved = Reserved
 task.status.Suspended = Suspended
 
 task.complete.error = An error occurred while trying to complete the task
-task.complete.success = The task has been completed successfully!
+task.complete.success = The task has been completed successfully
 
 error.title = Error info
 error.info= Error Code Detail
